--- a/Aula 3 - Python IA - Inteligência Artificial e Previsões/gabarito.ipynb
+++ b/Aula 3 - Python IA - Inteligência Artificial e Previsões/gabarito.ipynb
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "!pip install pandas ipykernel scikit-learn"
+    "# !pip install pandas ipykernel scikit-learn"
    ]
   },
   {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
       " 0   id_cliente                100000 non-null  int64  \n",
       " 1   mes                       100000 non-null  int64  \n",
       " 2   idade                     100000 non-null  float64\n",
-      " 3   profissao                 100000 non-null  object \n",
+      " 3   profissao                 100000 non-null  int64  \n",
       " 4   salario_anual             100000 non-null  float64\n",
       " 5   num_contas                100000 non-null  float64\n",
       " 6   num_cartoes               100000 non-null  float64\n",
@@ -703,12 +703,12 @@
       " 9   dias_atraso               100000 non-null  float64\n",
       " 10  num_pagamentos_atrasados  100000 non-null  float64\n",
       " 11  num_verificacoes_credito  100000 non-null  float64\n",
-      " 12  mix_credito               100000 non-null  object \n",
+      " 12  mix_credito               100000 non-null  int64  \n",
       " 13  divida_total              100000 non-null  float64\n",
       " 14  taxa_uso_credito          100000 non-null  float64\n",
       " 15  idade_historico_credito   100000 non-null  float64\n",
       " 16  investimento_mensal       100000 non-null  float64\n",
-      " 17  comportamento_pagamento   100000 non-null  object \n",
+      " 17  comportamento_pagamento   100000 non-null  int64  \n",
       " 18  saldo_final_mes           100000 non-null  float64\n",
       " 19  score_credito             100000 non-null  object \n",
       " 20  emprestimo_carro          100000 non-null  int64  \n",
@@ -716,7 +716,7 @@
       " 22  emprestimo_pessoal        100000 non-null  int64  \n",
       " 23  emprestimo_credito        100000 non-null  int64  \n",
       " 24  emprestimo_estudantil     100000 non-null  int64  \n",
-      "dtypes: float64(14), int64(7), object(4)\n",
+      "dtypes: float64(14), int64(10), object(1)\n",
       "memory usage: 19.1+ MB\n"
      ]
     },
@@ -724,6 +724,392 @@
      "data": {
       "text/plain": [
        "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_cliente</th>\n",
+       "      <th>mes</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>profissao</th>\n",
+       "      <th>salario_anual</th>\n",
+       "      <th>num_contas</th>\n",
+       "      <th>num_cartoes</th>\n",
+       "      <th>juros_emprestimo</th>\n",
+       "      <th>num_emprestimos</th>\n",
+       "      <th>dias_atraso</th>\n",
+       "      <th>...</th>\n",
+       "      <th>idade_historico_credito</th>\n",
+       "      <th>investimento_mensal</th>\n",
+       "      <th>comportamento_pagamento</th>\n",
+       "      <th>saldo_final_mes</th>\n",
+       "      <th>score_credito</th>\n",
+       "      <th>emprestimo_carro</th>\n",
+       "      <th>emprestimo_casa</th>\n",
+       "      <th>emprestimo_pessoal</th>\n",
+       "      <th>emprestimo_credito</th>\n",
+       "      <th>emprestimo_estudantil</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>1</td>\n",
+       "      <td>312.494089</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>266.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>3</td>\n",
+       "      <td>284.629162</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>267.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>5</td>\n",
+       "      <td>331.209863</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>268.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>4</td>\n",
+       "      <td>223.451310</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>269.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>2</td>\n",
+       "      <td>341.489231</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>378.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>0</td>\n",
+       "      <td>479.866228</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>5</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>379.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>2</td>\n",
+       "      <td>496.651610</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>0</td>\n",
+       "      <td>516.809083</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>7</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>381.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>3</td>\n",
+       "      <td>319.164979</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>8</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>382.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>2</td>\n",
+       "      <td>393.673696</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id_cliente  mes  idade  profissao  salario_anual  num_contas  \\\n",
+       "0            3392    1   23.0          2       19114.12         3.0   \n",
+       "1            3392    2   23.0          2       19114.12         3.0   \n",
+       "2            3392    3   23.0          2       19114.12         3.0   \n",
+       "3            3392    4   23.0          2       19114.12         3.0   \n",
+       "4            3392    5   23.0          2       19114.12         3.0   \n",
+       "...           ...  ...    ...        ...            ...         ...   \n",
+       "99995       37932    4   25.0         11       39628.99         4.0   \n",
+       "99996       37932    5   25.0         11       39628.99         4.0   \n",
+       "99997       37932    6   25.0         11       39628.99         4.0   \n",
+       "99998       37932    7   25.0         11       39628.99         4.0   \n",
+       "99999       37932    8   25.0         11       39628.99         4.0   \n",
+       "\n",
+       "       num_cartoes  juros_emprestimo  num_emprestimos  dias_atraso  ...  \\\n",
+       "0              4.0               3.0              4.0          3.0  ...   \n",
+       "1              4.0               3.0              4.0          3.0  ...   \n",
+       "2              4.0               3.0              4.0          3.0  ...   \n",
+       "3              4.0               3.0              4.0          5.0  ...   \n",
+       "4              4.0               3.0              4.0          6.0  ...   \n",
+       "...            ...               ...              ...          ...  ...   \n",
+       "99995          6.0               7.0              2.0         23.0  ...   \n",
+       "99996          6.0               7.0              2.0         18.0  ...   \n",
+       "99997          6.0               7.0              2.0         27.0  ...   \n",
+       "99998          6.0               7.0              2.0         20.0  ...   \n",
+       "99999          6.0               7.0              2.0         18.0  ...   \n",
+       "\n",
+       "       idade_historico_credito  investimento_mensal  comportamento_pagamento  \\\n",
+       "0                        265.0            21.465380                        1   \n",
+       "1                        266.0            21.465380                        3   \n",
+       "2                        267.0            21.465380                        5   \n",
+       "3                        268.0            21.465380                        4   \n",
+       "4                        269.0            21.465380                        2   \n",
+       "...                        ...                  ...                      ...   \n",
+       "99995                    378.0            24.028477                        0   \n",
+       "99996                    379.0            24.028477                        2   \n",
+       "99997                    380.0            24.028477                        0   \n",
+       "99998                    381.0            24.028477                        3   \n",
+       "99999                    382.0            24.028477                        2   \n",
+       "\n",
+       "       saldo_final_mes  score_credito  emprestimo_carro  emprestimo_casa  \\\n",
+       "0           312.494089           Good                 1                1   \n",
+       "1           284.629162           Good                 1                1   \n",
+       "2           331.209863           Good                 1                1   \n",
+       "3           223.451310           Good                 1                1   \n",
+       "4           341.489231           Good                 1                1   \n",
+       "...                ...            ...               ...              ...   \n",
+       "99995       479.866228           Poor                 1                0   \n",
+       "99996       496.651610           Poor                 1                0   \n",
+       "99997       516.809083           Poor                 1                0   \n",
+       "99998       319.164979       Standard                 1                0   \n",
+       "99999       393.673696           Poor                 1                0   \n",
+       "\n",
+       "       emprestimo_pessoal  emprestimo_credito emprestimo_estudantil  \n",
+       "0                       1                   1                     0  \n",
+       "1                       1                   1                     0  \n",
+       "2                       1                   1                     0  \n",
+       "3                       1                   1                     0  \n",
+       "4                       1                   1                     0  \n",
+       "...                   ...                 ...                   ...  \n",
+       "99995                   0                   0                     1  \n",
+       "99996                   0                   0                     1  \n",
+       "99997                   0                   0                     1  \n",
+       "99998                   0                   0                     1  \n",
+       "99999                   0                   0                     1  \n",
+       "\n",
+       "[100000 rows x 25 columns]"
       ]
      },
      "metadata": {},
@@ -787,9 +1173,9 @@
     "\n",
     "# LabelEncoder\n",
     "from sklearn.preprocessing import LabelEncoder\n",
+    "#LabelEncoder transformar todos os textos em números\n",
     "\n",
     "# profissao\n",
-    "\n",
     "# cientista - 1\n",
     "# bombeiro - 2\n",
     "# engenheiro - 3\n",
@@ -798,7 +1184,6 @@
     "codificador_profissao = LabelEncoder()\n",
     "tabela[\"profissao\"] = codificador_profissao.fit_transform(tabela[\"profissao\"])\n",
     "\n",
-    "\n",
     "# mix_credito\n",
     "codificador_credito = LabelEncoder()\n",
     "tabela[\"mix_credito\"] = codificador_credito.fit_transform(tabela[\"mix_credito\"])\n",
@@ -806,7 +1191,6 @@
     "# comportamento_pagamento\n",
     "codificador_pagamento = LabelEncoder()\n",
     "tabela[\"comportamento_pagamento\"] = codificador_pagamento.fit_transform(tabela[\"comportamento_pagamento\"])\n",
-    "\n",
     "\n",
     "display(tabela.info())"
    ]
